src/test/deca/context/invalid/avecObjet/non_existant_type_asm.deca
class A {
    MonType f() asm("RTS");
}